--- a/first.html
+++ b/first.html
@@ -9,11 +9,21 @@
 
 <body>
 
-<div>
-  <label>Name:</label>
-<input type="text" ng-model="name"/>  <!--declare angular model -->
-<h1>Hello {{name}}!</h1>
-<div/>
+  <div>
+    <label>Name:</label>
+    <input type="text" ng-model="name"/>  <!--declare angular model -->
+    <h1>Hello {{name}}!</h1>
+
+    <label>First Number:</label>
+    <input type="number" ng-model="number1"/>  <!--declare angular model -->
+    <label>Second Number:</label>
+    <input type="number" ng-model="number2"/>  <!--declare angular model -->
+
+    <hr>
+    <h1>sum: {{number1 + number2}}</h1> <!--angular requires two curly braces-->
+    <h1>Product: {{number1 * number2}}</h1>
+
+  <div/>
 
 </body>
 </html>
