--- a/validation/index.html
+++ b/validation/index.html
@@ -32,7 +32,7 @@ angular privided css styles
   </head>
   <body ng-app="app">
     <form ng-controller="FormController as formCtrl" name="form"
-          ng-submit="formCtrl.submitForm()" novalidate>
+          ng-submit="formCtrl.submitForm()" novalidate> <!---->
       <div>
         <!-- get the user's name -->
         <label>Enter Name:</label>
